# FileGenny

./: .gitignore  CMakeLists.txt  FileFactory.c  FileFactory.h  FileQueue.c  FileQueue.h  GenerateDummyText.c  GenerateDummyText.h  README.md  SupportedFileTypes.h  main.c
DLL/FileGenny/: CMakeLists.txt  FileFactory.c  FileQueue.c  library.h
DLL/FileGenny/HeaderFiles/: FileFactory.h  FileQueue.h  SupportedFileTypes.h
HeaderFiles/: FileQueue.h  SupportedFileTypes.h
